--- a/class02.qmd
+++ b/class02.qmd
@@ -26,9 +26,10 @@ Regarding Question 4, Professor Love is the large fellow standing in the front o
 ## Today's Agenda
 
 - Data Structures and Variables
-- Evaluating some of the Survey variables
-- Using R to look at a little data
-- Guessing Dr. Love's Age
+  - Evaluating some of the Quick Survey variables
+- Looking at some of the data collected in Class 01
+  - Group Guessing of Ages from 10 Photographs
+  - Guessing Dr. Love's Age
 
 ::: aside
 Version `r Sys.time()`
@@ -219,6 +220,69 @@ What should we do in these cases?
 ## Garbage in, garbage out ...
 
 ![](c02/images/lastlineofdefense.png)
+
+# Age Guessing <br /> (9 groups, 10 Photos)
+
+## Photos 1-5
+
+![](c02/images/photos_2022_1_5.png)
+
+- Data in `class01_group_guess10ages_2022-08-30` Google Sheet on our Shared Drive.
+
+## Photos 6-10
+
+![](c02/images/photos_2022_6_10.png)
+
+## Comparing the Groups {.smaller}
+
+Group | # Correct | # Within 1 | # Within 2 | # Too Low | # Too High
+:---: | :---: | :---: | :---: | :---: | :---:
+Starbucks | 2 | 4 | 5 | 2 | 6
+Cyber Squirrels | 1 | 2 | 4 | 4 | 5
+Rambunctious Rhinos | 0 | 4 | 4 | 4 | 6
+USS Enterprise | 0 | 3 | 3 | 4 | 6
+Hot Tukey Sandwich | 1 | 2 | 2 | 4 | 5
+Glasses | 0 | 1 | 2 | 3 | 7
+Sunday | 0 | 1 | 1 | 4 | 6
+The Bootstrappers | 0 | 1 | 1 | 5 | 5
+Dasani | 0 | 1 | 1 | 4 | 6
+
+- So ... who wins? 
+- What other summaries might be helpful?
+
+## Summaries of Errors {.smaller}
+
+Group | Mean Error | SD (Errors) | Median Error | (Min, Max) Error
+:---: | :---: | :---: | :---: | :---:
+Rambunctious Rhinos | -1.1 | 7.6 | 1 | (-16, 9)
+USS Enterprise | -0.5 | 6.3 | 1 | (-11, 11)
+Cyber Squirrels | 0.1 | 7.6 | 0.5 | (-10, 16)
+Sunday | 0.5 | 8.9 | 2 | (-14, 13)
+Glasses | 1.3 | 8.0 | 3 | (-16, 11)
+The Bootstrappers | 1.6 | 8.3 | 3 | (-11, 11)
+Hot Tukey Sandwich | 2.3 | 8.3 | 2.5 | (-12, 14)
+Dasani | 4.1 | 10.1 | 3.5 | (-11, 24)
+Starbucks | 4.4 | 6.0 | 2.5 | (-2, 16)
+
+- How helpful are these summaries in this setting?
+
+## Absolute and Squared Errors {.smaller}
+
+- **AE** = Absolute Value of Error = |guess - actual|, **MSE** = Mean Squared Error
+
+Group | Mean AE | Range (AE) | Median AE | MSE
+:---: | ---: | :---: | ---: | ----:
+USS Enterprise | 4.7 | (1, 11) | 3.5 | 35.9
+Starbucks | 5.0 | (0, 16) | 3.0 | 52.2
+Cyber Squirrels | 5.3 | (0, 16) | 3.5 | 51.5
+Rambunctious Rhinos | 5.5 | (1, 16) | 5.0 | 52.9
+Glasses | 6.3 | (1, 16) | 5.0 | 58.7
+Hot Tukey Sandwich | 6.9 | (0, 14) | 6.0 | 67.5
+Sunday | 7.3 | (1, 14) | 6.5 | 71.5
+The Bootstrappers | 7.4 | (1, 11) | 8.5 | 65.0
+Dasani | 8.1 | (1, 24) | 8.1 | 108.3
+
+- So ... now who wins?
 
 # Guessing My Age <br /> from Class 01
 
